ChangeLog
=========

Jul 31, 2015 : v0.18 released!
  - players armor is now rendered
  - new /import /export commands added
    - load and save blueprints (kinda like schematics)
    - this will allow for rapid development of villages, etc.
  - a cabin is now generated randomly (the cabin is a blueprint)
  - many bug fixes

Jul 1, 2015 : v0.17 released!
  - fixed sync problem when players are in vehicles (minecart, boat)
    - the server controls everything now while in vehicle
  - horse is mostly complete now
    - a message "Horse Tamed" appears when a horse is tamed (todo : heart particles)
    - mule/donkey can use chest
    - horses can use armor
    - saddle can be crafted (4 leather, 2 iron bars)
    - TODO : lead

Jun 21, 2015 : v0.16 released!
  - fixed cracking boat/minecart (cracks must be on their own texture unit)
  - added Mario World dimension
    - new turtle entity
    - new block types
    - create portal using [?] blocks (see RecipeCoinBlock)

Jun 16, 2015 : v0.15 released!
  - water/lava now flow
  - animations and cracks are now built into the main stitched texture and updated on the tick timer
  - many performance issues and bugs fixed

Jun 11, 2015 : v0.14 released!
  - 2 days to implement the Sign
    - signs can be placed on the side of other blocks or in the ground at any angle (full 360)
  - entities will no longer spawn on water
  - JNA has been completely replaced with JNI (now even faster)

May 18, 2015 : v0.12 released!
  - FPS doubled after using JNI to call OpenGL (JavaForce/8.0)
  - added enderman, zombie pigman, slime

May 7, 2015 : v0.11 released!
  - new blocks : Hopper, Dropper, Dispenser
  - all blocks/items/entities/dims/extras (including plugins) use dynamic IDs saved in the world
    - so there will be no id conflicts
  - reduced GC usage more (now better than the reference impl)
    - using a custom build of JNA (a modified version that creates less new Object[] arrays)
      - see github.com/pquiring/jna